Se agrega el enlace del Contáctanos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - AdministraPlus.com</title>
     <link rel="stylesheet" href="Css/Styles2.css"> <!-- Asegúrate de que el nombre de archivo y la ubicación sean correctos -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         function abrirInicioSesion() {
             var url = "SingIn.html"; // La URL de la página de inicio de sesión
@@ -20,7 +21,7 @@
             <ul>
                 <li><a href="#" onclick="abrirInicioSesion(); return false;">Inicia sesión</a></li>
                 <!-- Llamamos a la función abrirInicioSesion() al hacer clic en el enlace -->
-                <li><a href="contact.html">Contactanos</a></li>
+                <li><a href="/contact.html">Contactanos</a></li>
             </ul>
         </nav>
     </header>
