Se agrega el nueva imagen al contac

--- a/contact.html
+++ b/contact.html
@@ -12,26 +12,14 @@
 <body>
     <header></header>
     <main>
-        <!--
-  Heads up! 👋
-
-  Plugins:
-    - @tailwindcss/forms
--->
-
-<!--
-  Heads up! 👋
-
-  Plugins:
-    - @tailwindcss/forms
--->
+   
 
 <section class="bg-white">
     <div class="lg:grid lg:min-h-screen lg:grid-cols-12">
       <aside class="relative block h-16 lg:order-last lg:col-span-5 lg:h-full xl:col-span-6">
         <img
           alt=""
-          src="https://images.unsplash.com/photo-1605106702734-205df224ecce?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+          src="https://static.vecteezy.com/system/resources/previews/000/206/789/non_2x/character-call-center-world-service-illustration-vector.jpg"
           class="absolute inset-0 h-full w-full object-cover"
         />
       </aside>
@@ -113,7 +101,7 @@
                 
   
                 <span class="text-sm text-gray-700">
-                  I want to receive emails about events, product updates and company announcements.
+                  Quiero recibir correos electrónicos de eventos o notificaciones que realice la página.
                 </span>
               </label>
             </div>
