Se agrega el header al contact

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="#" onclick="abrirInicioSesion(); return false;">Inicia sesión</a></li>
                 <!-- Llamamos a la función abrirInicioSesion() al hacer clic en el enlace -->
-                <li><a href="/contact.html">Contactanos</a></li>
+                <li><a href="/AdministraPlus/contact.html">Contactanos</a></li>
             </ul>
         </nav>
     </header>
