cambios de sprint 204/05/22

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <h1>AdministraPlus</h1>
+        <h1>ADplus</h1>
         <nav>
             <ul>
                 <li><a href="#" onclick="abrirInicioSesion(); return false;">Inicia sesión</a></li>
