--- a/Singup.html
+++ b/Singup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,11 @@
     <link rel="stylesheet" href="Css/Style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
     <div x-data="{ isOpen: true }" class="modal-container">
-        <div x-show="isOpen" 
-            x-transition:enter="transition duration-300 ease-out"
-            x-transition:enter-start="translate-y-4 opacity-0 sm:translate-y-0 sm:scale-95"
-            x-transition:enter-end="translate-y-0 opacity-100 sm:scale-100"
-            x-transition:leave="transition duration-150 ease-in"
-            x-transition:leave-start="translate-y-0 opacity-100 sm:scale-100"
-            x-transition:leave-end="translate-y-4 opacity-0 sm:translate-y-0 sm:scale-95"
-            class="modal" 
-            aria-labelledby="modal-title" role="dialog" aria-modal="true">
+        <div x-show="isOpen" x-transition:enter="transition duration-300 ease-out" x-transition:enter-start="translate-y-4 opacity-0 sm:translate-y-0 sm:scale-95" x-transition:enter-end="translate-y-0 opacity-100 sm:scale-100" x-transition:leave="transition duration-150 ease-in"
+            x-transition:leave-start="translate-y-0 opacity-100 sm:scale-100" x-transition:leave-end="translate-y-4 opacity-0 sm:translate-y-0 sm:scale-95" class="modal" aria-labelledby="modal-title" role="dialog" aria-modal="true">
             <div class="modal-content">
                 <div>
                     <img class="modal-image" src="https://images.unsplash.com/photo-1579226905180-636b76d96082?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
@@ -27,10 +22,10 @@
                     </div>
                 </div>
                 <div class="modal-actions">
-                    <a href="Natural.html" class="btn natural"> 
+                    <a href="/AdministraPlus/natural.html" class="btn natural">
                         <button @click="isOpen = false">Natural</button>
                     </a>
-                    <a href="Juridica.html" class="btn juridica"> 
+                    <a href="/AdministraPlus/juridica.html" class="btn juridica">
                         <button>Jurídica</button>
                     </a>
                 </div>
@@ -38,4 +33,5 @@
         </div>
     </div>
 </body>
+
 </html>
