se agrega página principal

--- a/natural.html
+++ b/natural.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Persona Natural</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,9 +15,7 @@
         <div class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8">
             <a class="block text-teal-600" href="#">
                 <span class="sr-only">Home</span>
-                <svg height="60px" width="60px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-50.44 -50.44 605.28 605.28"
-                    xml:space="preserve" fill="#000000">
+                <svg height="60px" width="60px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-50.44 -50.44 605.28 605.28" xml:space="preserve" fill="#000000">
                     <g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(0,0), scale(1)">
                         <path transform="translate(-50.44, -50.44), scale(37.83)" fill="#0bc1fe"
                             d="M9.166.33a2.25 2.25 0 00-2.332 0l-5.25 3.182A2.25 2.25 0 00.5 5.436v5.128a2.25 2.25 0 001.084 1.924l5.25 3.182a2.25 2.25 0 002.332 0l5.25-3.182a2.25 2.25 0 001.084-1.924V5.436a2.25 2.25 0 00-1.084-1.924L9.166.33z"
@@ -138,19 +137,16 @@
             <div class="flex flex-1 items-center justify-end md:justify-between">
                 <div class="flex items-center gap-4">
                     <div class="sm:flex sm:gap-4">
-                        <a class="block rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-teal-700"
-                            href="#">
+                        <a class="block rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-teal-700" href="#">
                             Login
                         </a>
 
-                        <a class="hidden rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600 transition hover:text-teal-600/75 sm:block"
-                            href="#">
+                        <a class="hidden rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600 transition hover:text-teal-600/75 sm:block" href="#">
                             Inicio
                         </a>
                     </div>
 
-                    <button
-                        class="block rounded bg-gray-100 p-2.5 text-gray-600 transition hover:text-gray-600/75 md:hidden">
+                    <button class="block rounded bg-gray-100 p-2.5 text-gray-600 transition hover:text-gray-600/75 md:hidden">
                         <span class="sr-only">Toggle menu</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor" stroke-width="2">
@@ -165,23 +161,21 @@
     <main>
         <section class="bg-white dark:bg-gray-900">
             <div class="flex justify-center min-h-screen">
-                <div class="hidden bg-cover lg:block lg:w-2/5"
-                    style="background-image: url('https://images.unsplash.com/photo-1494621930069-4fd4b2e24a11?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=715&q=80')">
+                <div class="hidden bg-cover lg:block lg:w-2/5" style="background-image: url('https://images.unsplash.com/photo-1494621930069-4fd4b2e24a11?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=715&q=80')">
                 </div>
 
                 <div class="flex items-center w-full max-w-3xl p-8 mx-auto lg:px-12 lg:w-3/5">
-                    <div class="w-full">
-                        <h1 class="text-2xl font-semibold tracking-wider text-gray-800 capitalize dark:text-white">
-                            Obtenga su cuenta gratuita ahora.
+                    <div class="w-full h-min ">
+                        <h1 class="text-2xl font-semibold tracking-wider text-gray-900  dark:text-white">
+                            ¡Obtenga su cuenta gratuita ahora!
                         </h1>
 
-                        <p class="mt-4 text-gray-500 dark:text-gray-400">
-                            Vamos a configurar todo para que pueda verificar su cuenta personal y comenzar a configurar
-                            su perfil.
+                        <p class="mt-4 text-gray-900 dark:text-gray-900">
+                            Vamos a configurar todo para que pueda verificar su cuenta personal y comenzar a configurar su perfil.
                         </p>
 
                         <div class="mt-6">
-                            <h1 class="text-gray-500 dark:text-gray-300">Selecciona el tipo de cuenta</h1>
+                            <h1 class="text-gray-900 dark:text-gray-900">Selecciona el tipo de cuenta</h1>
 
                             <!-- <div class="mt-3 md:flex md:items-center md:-mx-2">
                             <button class="flex justify-center w-full px-6 py-3 text-white bg-blue-500 rounded-lg md:w-auto md:mx-2 focus:outline-none">
@@ -208,47 +202,45 @@
 
                             <form class="grid grid-cols-1 gap-6 mt-8 md:grid-cols-2">
                                 <div>
-                                    <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Nombre</label>
-                                    <input type="text" placeholder="Nombre"
-                                        class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                                    <label class="block font-semibold mb-2 text-sm text-gray-900 dark:text-gray-900">Nombre</label>
+                                    <input type="text" placeholder="Nombre" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                                    />
                                 </div>
 
                                 <div>
-                                    <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Apellidos</label>
-                                    <input type="text" placeholder="Apellido"
-                                        class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                                    <label class="block font-semibold mb-2 text-sm text-gray-900 dark:text-gray-200">Apellidos</label>
+                                    <input type="text" placeholder="Apellido" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                                    />
                                 </div>
 
                                 <div>
-                                    <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Número de
+                                    <label class="block font-semibold mb-2 text-sm text-gray-900 dark:text-gray-200">Número de
                                         telefono</label>
-                                    <input type="text" placeholder="XXX-XX-XXXX-XXX"
-                                        class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                                    <input type="text" placeholder="XXX-XX-XXXX-XXX" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                                    />
                                 </div>
 
                                 <div>
-                                    <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Correo
+                                    <label class="block font-semibold mb-2 text-sm text-gray-600 dark:text-gray-200">Correo
                                         electronico</label>
-                                    <input type="email" placeholder="Myemail@example.com"
-                                        class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                                    <input type="email" placeholder="Myemail@example.com" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                                    />
                                 </div>
 
                                 <div>
-                                    <label
-                                        class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Contraseña</label>
-                                    <input type="password" placeholder="Ingresa tu contraseña"
-                                        class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                                    <label class="block font-semibold mb-2 text-sm text-gray-600 dark:text-gray-200">Contraseña</label>
+                                    <input type="password" placeholder="Ingresa tu contraseña" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                                    />
                                 </div>
 
                                 <div>
-                                    <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Confirmar
+                                    <label class="block font-semibold mb-2 text-sm text-gray-600 dark:text-gray-200">Confirmar
                                         contraseña</label>
-                                    <input type="password" placeholder="Ingresa tu contraseña"
-                                        class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                                    <input type="password" placeholder="Ingresa tu contraseña" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+                                    />
                                 </div>
 
-                                <button
-                                    class="flex items-center justify-between w-full px-6 py-3 text-sm tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-lg hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50">
+                                <button class="flex  font-semibold items-center justify-between w-full px-6 py-3 text-sm tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-lg hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50">
                                     <span>Ingresar</span>
 
                                     <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 rtl:-scale-x-100"
