--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - AdministraPlus.com</title>
-    <link rel="stylesheet" href="Css/Styles2.css"> <!-- Asegúrate de que el nombre de archivo y la ubicación sean correctos -->
+    <link rel="stylesheet" href="Css/Styles2.css">
+    <!-- Asegúrate de que el nombre de archivo y la ubicación sean correctos -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/AdministraPlus/imagenes/icono.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         function abrirInicioSesion() {
@@ -17,6 +20,7 @@
         }
     </script>
 </head>
+
 <body>
     <header>
         <h1>ADplus</h1>
@@ -31,8 +35,7 @@
     <section>
         <h2>Gestiona tu dinero de manera eficiente</h2>
         <p>
-            AdministraPlus te ofrece herramientas potentes para la gestión óptima de tus finanzas personales y empresariales.
-            Simplifica tus procesos financieros, maximiza tus ahorros y mejora la rentabilidad de tu empresa con nuestra plataforma.
+            AdministraPlus te ofrece herramientas potentes para la gestión óptima de tus finanzas personales y empresariales. Simplifica tus procesos financieros, maximiza tus ahorros y mejora la rentabilidad de tu empresa con nuestra plataforma.
         </p>
         <a href="Singup.html">¡Empieza ahora!</a>
     </section>
@@ -40,4 +43,5 @@
         © 2024 AdministraPlus.com. Todos los derechos reservados.
     </footer>
 </body>
+
 </html>
