--- a/principal.html
+++ b/principal.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-
+    <h2>Gestiona tu dinero de manera eficiente</h2>
+    <p>
+        AdministraPlus te ofrece herramientas potentes para la gestión óptima de tus finanzas personales y empresariales. Simplifica tus procesos financieros, maximiza tus ahorros y mejora la rentabilidad de tu empresa con nuestra plataforma.
+    </p>
 </body>
 
 </html>
