Se agregan notas del css

--- a/SingIn.html
+++ b/SingIn.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - AdministraPlus.com</title>
-    <link rel="stylesheet" href="Css/Styles3.css">
+    <link rel="stylesheet" href="Css/Styles3.css"><!-- Se le aplica el Style3 -->
 </head>
 <body class="bg-gray-900 text-white">
     <div class="login-container">
