--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - AdministraPlus.com</title>
-    <link rel="stylesheet" href="Css/Styles2.css">
+    <link rel="stylesheet" href="Css/Styles2.css">  <!-- //Le aplica el Style2 -->
     <!-- Asegúrate de que el nombre de archivo y la ubicación sean correctos -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
