--- a/Singup.html
+++ b/Singup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AdministraPlus.com</title>
-    <link rel="stylesheet" href="Css/Style.css">
+    <link rel="stylesheet" href="Css/Style.css"><!-- Se le aplica el Style1 -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
