iconos en casi todos los html y creacion del archibo quienes somos

--- a/juridica.html
+++ b/juridica.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Persona Jurídica</title>
+    <link rel="shortcut icon" href="/AdministraPlus/imagenes/icono.ico">
+
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -15,38 +17,37 @@
             <a class="block text-teal-600" href="#">
                 <span class="sr-only">Home</span>
                 <a href="/AdministraPlus/index.html">
-                    <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-500 rounded-full" viewBox="0 0 24 24">
+                    <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
+                        stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        class="w-10 h-10 text-white p-2 bg-blue-600 rounded-full" viewBox="0 0 24 24">
                         <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                     </svg>
                 </a>
                 <div class="flex flex-1 items-center justify-end md:justify-between">
                     <div class="flex items-center gap-4">
                         <div class="sm:flex sm:gap-4">
-                            <a class="block rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-teal-700" href="#">
-                                Login
+                            <a class="block rounded-md bg-blue-400 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-blue-800"
+                                href="#">
+                                Iniciar sesión
                             </a>
 
-                            <a class="hidden rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600 transition hover:text-teal-600/75 sm:block" href="#">
+                            <a class="hidden rounded-md bg-blue-400 px-5 py-2.5 text-sm font-medium text-white transition hover:text-teal-600/75 sm:block"
+                                href="/AdministraPlus/index.html">
                                 Inicio
                             </a>
                         </div>
-
-                        <button class="block rounded bg-gray-100 p-2.5 text-gray-600 transition hover:text-gray-600/75 md:hidden">
-                            <span class="sr-only">Toggle menu</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-                            </svg>
-                        </button>
                     </div>
                 </div>
+            </a>
         </div>
     </header>
 
     <main>
         <section class="bg-white dark:bg-gray-900">
             <div class="flex justify-center min-h-screen">
-                <div class="hidden bg-cover lg:block lg:w-2/5" style="background-image: url(https://expertscolumn.com/image_files/thumbmain/imag_61370702_1680896644.jpg)" alt="Hombre en untraje elegante">
+                <div class="hidden bg-cover lg:block lg:w-2/5"
+                    style="background-image: url(https://expertscolumn.com/image_files/thumbmain/imag_61370702_1680896644.jpg)"
+                    alt="Hombre en untraje elegante">
                 </div>
 
                 <div class="flex items-center w-full max-w-3xl p-8 mx-auto lg:px-12 lg:w-3/5">
@@ -56,50 +57,52 @@
                         </h1>
 
                         <p class="mt-4 text-gray-500 dark:text-gray-400">
-                            Vamos a configurarlo todo para que pueda verificar su cuenta empreasarial y comenzar a configurar su perfil.
+                            Vamos a configurarlo todo para que pueda verificar su cuenta empreasarial y comenzar a
+                            configurar su perfil.
                         </p>
 
                         <form class="grid grid-cols-1 gap-6 mt-8 md:grid-cols-2">
                             <div>
                                 <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Razon social</label>
-                                <input type="text" placeholder="Ingresa la razon social" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                                />
+                                <input type="text" placeholder="Ingresa la razon social"
+                                    class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                             </div>
 
                             <div>
                                 <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">NIT</label>
-                                <input type="number" placeholder="Ingresa el NIT de la empresa" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                                />
+                                <input type="number" placeholder="Ingresa el NIT de la empresa"
+                                    class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                             </div>
 
                             <div>
                                 <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Numero
                                     telfonico</label>
-                                <input type="text" placeholder="XXX-XX-XXXX-XXX" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                                />
+                                <input type="text" placeholder="XXX-XX-XXXX-XXX"
+                                    class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                             </div>
 
                             <div>
                                 <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Email</label>
-                                <input type="email" placeholder="johnsnow@ejemplo.com" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                                />
+                                <input type="email" placeholder="johnsnow@ejemplo.com"
+                                    class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                             </div>
 
                             <div>
                                 <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Contraseña</label>
-                                <input type="password" placeholder="Ingrsa tu contraseña" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                                />
+                                <input type="password" placeholder="Ingrsa tu contraseña"
+                                    class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                             </div>
 
                             <div>
                                 <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">confirmar
                                     Contraseña</label>
-                                <input type="password" placeholder="Confirma tu contraseña" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
-                                />
+                                <input type="password" placeholder="Confirma tu contraseña"
+                                    class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                             </div>
 
                             <a href="/AdministraPlus/principal.html" target="_blank">
-                                <button class="flex items-center justify-between w-full px-6 py-3 text-sm tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-lg hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50">
+                                <button
+                                    class="flex items-center justify-between w-full px-6 py-3 text-sm tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-lg hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50">
                                     <span>Ingresar</span>
 
                                     <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 rtl:-scale-x-100"
