--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - AdministraPlus.com</title>
-    <link rel="stylesheet" href="Css/Styles2.css">  <!-- //Le aplica el Style2 -->
+    <link rel="stylesheet" href="Css/Styles2.css"> <!-- //Le aplica el Style2 -->
     <!-- Asegúrate de que el nombre de archivo y la ubicación sean correctos -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="shortcut icon" href="/AdministraPlus/imagenes/icono.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -23,19 +25,29 @@
 
 <body>
     <header>
-        <h1>ADplus</h1>
-        <nav>
-            <ul>
-                <li><a href="#" onclick="abrirInicioSesion(); return false;">Inicia sesión</a></li>
-                <!-- Llamamos a la función abrirInicioSesion() al hacer clic en el enlace -->
-                <li><a href="/AdministraPlus/contact.html">Contactanos</a></li>
-            </ul>
-        </nav>
+        <div class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8">
+            <svg width="48px" height="48px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    class="w-10 h-10 text-white p-2 bg-blue-600 rounded-full" viewBox="0 0 24 24">
+                    <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+                </svg>
+            <h1>ADplus</h1>
+            <nav>
+                <ul>
+                    <li><a href="#" onclick="abrirInicioSesion(); return false;">Inicia sesión</a></li>
+                    <!-- Llamamos a la función abrirInicioSesion() al hacer clic en el enlace -->
+                    <li><a href="/AdministraPlus/contact.html">Contactanos</a></li>
+                    <li><a href="/AdministraPlus/Quienes-somos.html">Quienes somos</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <section>
         <h2>Gestiona tu dinero de manera eficiente</h2>
         <p>
-            AdministraPlus te ofrece herramientas potentes para la gestión óptima de tus finanzas personales y empresariales. Simplifica tus procesos financieros, maximiza tus ahorros y mejora la rentabilidad de tu empresa con nuestra plataforma.
+            AdministraPlus te ofrece herramientas potentes para la gestión óptima de tus finanzas personales y
+            empresariales. Simplifica tus procesos financieros, maximiza tus ahorros y mejora la rentabilidad de tu
+            empresa con nuestra plataforma.
         </p>
         <a href="Singup.html">¡Empieza ahora!</a>
     </section>
