se agrega footer a la principal

--- a/principal.html
+++ b/principal.html
@@ -37,18 +37,6 @@
     </header>
 
     <main>
-<<<<<<< HEAD
-       <h1>Gestiona tu dinero de manera eficiente</h1>
-        <p>
-            A continuación anota tus ingresos y gastos:
-        </p></div> 
-        <br> 
-        <hr>
-        <br>
-        <form action="" class="contenedor">
-        <div class="flex flex-row">
-            <div class="ingresos"> <label class="text-gray-900">
-=======
         <div>
             <h1>Gestiona tu dinero de manera eficiente</h1>
             <p>
@@ -58,8 +46,8 @@
         <br>
         <hr>
         <br>
+        <form action="" class="contenedor">
         <div class="ingresos"> <label class="text-gray-900">
->>>>>>> d0bb7a959c3cda9da8f2ad77ee0b483945f111aa
                 Ingresos:
             </label>
             <div class="relative mt-2 max-w-xs text-gray-900">
@@ -70,17 +58,6 @@
                         <option>USD</option>
                     </select>
                 </div>
-<<<<<<< HEAD
-                <input type="number" id="Ropa" placeholder="$0.00 " class="flex-col w-full pl-[4.5rem] pr-3 py-2 appearance-none  outline-none border focus:border-indigo-900 shadow-sm rounded-lg"/>
-            </div>
-            </div>
-            </div> <br>
-            <div class="gastos">
-                <div > <label class="text-gray-900">
-                    Gastos:
-                </label>
-                <div class="relative mt-2 max-w-xs text-gray-900">
-=======
                 <input type="number" id="Ropa" placeholder="$0.00"
                     class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-900 shadow-sm rounded-lg" />
             </div>
@@ -91,7 +68,6 @@
                     Gastos:
                 </label>
                 <div class="relative mt-2 max-w-xs text-gray-500">
->>>>>>> d0bb7a959c3cda9da8f2ad77ee0b483945f111aa
                     <div class="absolute inset-y-0 left-3 flex items-center">
                         <select class="text-sm bg-transparent outline-none rounded-lg h-full">
                             <option>PESO</option>
@@ -99,40 +75,12 @@
                             <option>USD</option>
                         </select>
                     </div>
-<<<<<<< HEAD
-                    <input type="number" id="Ropa" placeholder="$0.00" class="w-full pl-[4.5rem] pr-3 py-2 appearance-none  outline-none border focus:border-indigo-900 shadow-sm rounded-lg font-bold"/>
-                </div>
-            </div>
-        </div>  
-           
-
-<br>
-<div>
-    <label class="text-gray-900">
-        Saldo:
-    </label>
-    <div class="relative mt-2 max-w-xs text-gray-900">
-        <div class="absolute inset-y-0 left-3 flex items-center">
-            <select class="text-sm bg-transparent outline-none rounded-lg h-full">
-                <option>PESO</option>
-                <option>EUR</option>
-                <option>USD</option>
-            </select>
-        </div>
-        <input type="number" id="Ropa" placeholder="$0.00" class="w-full pl-[4.5rem] pr-3 py-2 appearance-none  outline-none border focus:border-indigo-600 shadow-sm rounded-lg"/>
-    </div>
-</div>
-</form>
-<br>
-<hr class="linea">
-        <form action="" class="contenedor">
-=======
                     <input type="number" id="Ropa" placeholder="$0.00"
                         class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
                 </div>
             </div>
         </div>
-
+    
         <br>
         <div>
             <label class="text-gray-900">
@@ -150,10 +98,11 @@
                     class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
             </div>
         </div>
+    </form>
         <br>
         <hr class="linea">
->>>>>>> d0bb7a959c3cda9da8f2ad77ee0b483945f111aa
-        <div>
+        <form action="" class="contenedor2">
+            <div>
             <label class="text-gray-900">
                 Ropa:
             </label>
@@ -165,12 +114,8 @@
                         <option>USD</option>
                     </select>
                 </div>
-<<<<<<< HEAD
-                <input type="number" id="Ropa" placeholder="$0.00" class="w-full pl-[4.5rem] pr-3 py-2 appearance-none  outline-none border focus:border-indigo-600 shadow-sm rounded-lg"/>
-=======
                 <input type="number" id="Ropa" placeholder="$0.00"
                     class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
->>>>>>> d0bb7a959c3cda9da8f2ad77ee0b483945f111aa
             </div>
         </div>
         <br>
@@ -186,12 +131,8 @@
                         <option>USD</option>
                     </select>
                 </div>
-<<<<<<< HEAD
-                <input type="number" id="Transporte" placeholder="$0.00" class="w-full pl-[4.5rem] pr-3 py-2 appearance-none  outline-none border focus:border-indigo-900 shadow-sm rounded-lg"/>
-=======
                 <input type="number" id="Transporte" placeholder="$0.00"
                     class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
->>>>>>> d0bb7a959c3cda9da8f2ad77ee0b483945f111aa
             </div>
         </div>
         <br>
@@ -207,14 +148,6 @@
                         <option>USD</option>
                     </select>
                 </div>
-<<<<<<< HEAD
-                <input type="number" id="Comida" placeholder="$0.00" class="w-full pl-[4.5rem] pr-3 py-2 appearance-none  outline-none border focus:border-indigo-900 shadow-sm rounded-lg"/>
-            </div>
-        </div>
-        <br>
-                <div>
-            <label class="text-gray-900">
-=======
                 <input type="number" id="Comida" placeholder="$0.00"
                     class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
             </div>
@@ -222,7 +155,6 @@
         <br>
         <div>
             <label class="text-gray-600">
->>>>>>> d0bb7a959c3cda9da8f2ad77ee0b483945f111aa
                 Alquiler:
             </label>
             <div class="relative mt-2 max-w-xs text-gray-900">
@@ -233,12 +165,8 @@
                         <option>USD</option>
                     </select>
                 </div>
-<<<<<<< HEAD
-                <input type="number" id="Alquiler" placeholder="$0.00" class="w-full pl-[4.5rem] pr-3 py-2 appearance-none  outline-none border focus:border-indigo-900 shadow-sm rounded-lg"/>
-=======
                 <input type="number" id="Alquiler" placeholder="$0.00"
                     class="w-full pl-[4.5rem] pr-3 py-2 appearance-none bg-transparent outline-none border focus:border-indigo-600 shadow-sm rounded-lg" />
->>>>>>> d0bb7a959c3cda9da8f2ad77ee0b483945f111aa
             </div>
         </div>
     </form>
@@ -247,6 +175,9 @@
 
 
     </main>
+    <footer>
+        © 2024 AdministraPlus. Creado por Team ADPlus. Todos los derechos reservados.
+    </footer>
 
 </body>
 
